content/docs-archive/v0.8.7-rc1/configuration/librechat_yaml/ai_endpoints/openrouter.mdx
---
title: OpenRouter
icon: OpenRouter
description: Complete setup guide for using OpenRouter as a custom endpoint in LibreChat
---

[OpenRouter](https://openrouter.ai/) provides access to hundreds of AI models through a single API. This guide walks you through setting up OpenRouter as a custom endpoint in LibreChat from scratch.

<Callout type="info" title="Prerequisites">

Before starting, make sure you have:
- LibreChat installed and running (see [Docker setup](/v0.8.7-rc1/docs/local/docker))
- A `librechat.yaml` file created and mounted (see [librechat.yaml guide](/v0.8.7-rc1/docs/configuration/librechat_yaml))

</Callout>

## Setup

<Steps>
  <Step>

### Get an API Key

Create an account at [openrouter.ai](https://openrouter.ai/) and generate an API key from the [Keys page](https://openrouter.ai/keys).

Copy the key -- it starts with `sk-or-v1-`.

  </Step>
  <Step>

### Add the Key to Your .env File

Open your `.env` file in the project root and add your OpenRouter API key:

```bash filename=".env"
OPENROUTER_KEY=sk-or-v1-your-key-here
```

<Callout type="error" title="Use OPENROUTER_KEY, Not OPENROUTER_API_KEY">

You must use `OPENROUTER_KEY` as the variable name. Using `OPENROUTER_API_KEY` will override the built-in OpenAI endpoint to use OpenRouter as well, which is almost certainly not what you want.

</Callout>

  </Step>
  <Step>

### Add the Endpoint to librechat.yaml

Add the following to your `librechat.yaml` file. If the file already has content, merge the `endpoints` section with your existing configuration:

```yaml filename="librechat.yaml"
version: 1.3.5
cache: true
endpoints:
  custom:
    - name: "OpenRouter"
      apiKey: "${OPENROUTER_KEY}"
      baseURL: "https://openrouter.ai/api/v1"
      models:
        default: ["meta-llama/llama-3-70b-instruct"]
        fetch: true
      titleConvo: true
      titleModel: "meta-llama/llama-3-70b-instruct"
      dropParams: ["stop"]
      modelDisplayLabel: "OpenRouter"
```

Key fields explained:

| Field | Purpose |
|-------|---------|
| `apiKey: "${OPENROUTER_KEY}"` | References the env var from Step 2. The `${}` syntax tells LibreChat to read the value from `.env`. |
| `models.fetch: true` | Fetches the full model list from OpenRouter's API, so new models appear automatically. |
| `dropParams: ["stop"]` | Removes the `stop` parameter from requests. OpenRouter models use varied stop tokens, so dropping this avoids compatibility issues. |
| `modelDisplayLabel: "OpenRouter"` | The name shown in LibreChat's endpoint selector. |

</Step>
  <Step>

### Restart LibreChat

<Tabs items={['Docker', 'Local']}>
  <Tabs.Tab>

```bash
docker compose down && docker compose up -d
```

  </Tabs.Tab>
  <Tabs.Tab>

Stop the running process (Ctrl+C) and restart:

```bash
npm run backend
```

  </Tabs.Tab>
</Tabs>

  </Step>
  <Step>

### Verify It Works

Open LibreChat in your browser. You should see **OpenRouter** in the endpoint selector dropdown. Select it to see the available models.

If OpenRouter does not appear, check the server logs for configuration errors:

```bash
docker compose logs api | grep -i "error\|openrouter"
```

  </Step>
</Steps>

## Troubleshooting

### OpenRouter Does Not Appear in the Model Selector

Check these items in order:

1. `OPENROUTER_KEY` is set in `.env`.
2. `librechat.yaml` contains the OpenRouter entry under `endpoints.custom`.
3. Docker users have mounted `librechat.yaml` in `docker-compose.override.yml`.
4. LibreChat was restarted after editing both files.
5. The API logs do not show YAML validation errors.

```bash
docker compose logs api
```

If the logs mention a missing environment variable, check that the variable name in `.env` matches the variable referenced in `librechat.yaml`. For this guide, that means `apiKey: "${OPENROUTER_KEY}"` in `librechat.yaml` and `OPENROUTER_KEY=...` in `.env`.

### OpenRouter Returns 402 Payment Required

A `402 Payment Required` response comes from OpenRouter, not LibreChat. Add credits or choose a free/available model in OpenRouter, then retry the same endpoint in LibreChat.

## Customization

### Using user_provided API Key

Instead of storing the key in `.env`, you can let each user provide their own key through the LibreChat UI:

```yaml
apiKey: "user_provided"
```

Users will see a key input field when selecting the OpenRouter endpoint.

### Limiting Available Models

Instead of fetching all models, you can specify a fixed list:

```yaml
models:
  default: ["anthropic/claude-3.5-sonnet", "openai/gpt-4o", "meta-llama/llama-3-70b-instruct"]
  fetch: false
```

## Reference

<Cards num={2}>
  <Cards.Card title="Custom Endpoint Fields" href="/v0.8.7-rc1/docs/configuration/librechat_yaml/object_structure/custom_endpoint" arrow>
    All available fields for custom endpoint configuration
  </Cards.Card>
  <Cards.Card title="Full Example Config" href="/v0.8.7-rc1/docs/configuration/librechat_yaml/example" arrow>
    Complete annotated librechat.yaml with multiple endpoints
  </Cards.Card>
</Cards>
